# mf-framework

./: .gitignore  LICENSE  README.md  pyproject.toml  update_aws_codeartifact_token.sh  update_lib_local.sh
build_and_deploy/: README.md  main.py
notes/: algo.py  lines.txt  model_parser.py  script.py  source_test.py
notes/module_architecture/: architecture_brainstorm_v1.0
notes/test_mosaic_engine/: agronomical_model.py  elaborator.py  engine_parser.py  environment.py  model.py  rules.py
scripts/: count_lines.py  extract_params.py
test/: antrapi.py  main.py  test_lib.py
test/modules/: exceptions.py  growth_stages.py
test/mosaic_example/: engine_start.py
test/test_engine_cloud/: engine_test.py
test/test_engine_local/: engine_test.py
tools/code_examples/: concurrent_class_test.py
tools/model_deployer/: argparse_manager.py  builder.py  config.py  deployer.py  (+4 more)
unittests/: ApplyWindowing_test.py  ComponentParser_test.py  Converter_test.py  DatetimeParser_test.py  InputDataValidator_test.py  LevenshteinDistanceColumnDetectEngine_test.py  MADEApi_test.py  MadeWeatherProvider_test.py  MapValues_test.py  MappedValueOnTimeRangesRule_test.py  Model_test.py  ModuleParser_test.py  MosaicEngine_test.py  MosaicRulesHub_test.py  OutputModel_test.py  RawParser_test.py  SelectMaxAndCompare_test.py  SelectMaxApplyAndComparison_test.py  SimpleComparativeRule_test.py  Source_input_test.py  Source_missing_data_test.py  Source_validation_test.py  apply_condition_over_values_test.py  getDayRule_test.py  getHourlyRule_test.py  isDayTimeRule_test.py  isNightTimeRule_test.py
(+191 files in other folders)
