[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic_framework"
version = "1.2.4.20250523"
authors = [
  { name="Stefano Zimmitti", email="stefano.zimmitti@xfarm.ag" },
]
description = "Library used to build, mantain, test and debug DSS."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3==1.34.145",
    "pandas==2.0.3",
    "requests==2.31.0",
    "twine==5.1.1",
    "openpyxl==3.1.5"
]
[project.urls]
"Homepage" = "www.xfarm.ag"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
